[project]
name = "comfyui-novakid"
description = "ComfyUI: Novakid. A node."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/chesnokovivan/ComfyUI-Novakid"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Novakid"
Icon = ""
